# flicker

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config-examples.yaml  flicker  flicker.yaml  test-config.yaml
.github/workflows/: ci.yml  release.yml
examples/: config-examples.yaml  flicker-example.yaml
src/: config.rs  destination.rs  filter.rs  main.rs  tailer.rs
src/destinations/: elasticsearch.rs  file.rs  http.rs  mod.rs  syslog.rs
test_tools/: test-buffering.sh  test-config.yaml  test-e2e.sh  test-log-generator.py  test-receiver.py
