[package]
name = "flicker"
version = "0.1.0"
edition = "2024"

[dependencies]
# The Async Runtime (Go's scheduler equivalent)
tokio = { version = "1", features = ["full"] }

# Serialization (JSON/YAML parsing)
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# Error handling (Clean error propagation)
anyhow = "1.0"

# Async Traits (Rust traits normally can't be async, this macro fixes that)
async-trait = "0.1"

# HTTP Client (For HTTP/Elasticsearch destinations)
reqwest = { version = "0.11", features = ["json"] }

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Date/time handling (For Elasticsearch timestamps)
chrono = "0.4"

# System hostname (For Syslog)
hostname = "0.4"

# Regular expressions (For log filtering)
regex = "1"

[dev-dependencies]
# Temporary files for testing
tempfile = "3"

[profile.release]
opt-level = 's' # Optimize for size
lto = true      # Link-Time Optimization
codegen-units = 1 # Minimize parallel compilation units
strip = true    # Strip debug symbols

